@@ -21,7 +21,7 @@ _testmain.go
 *.out
 *.log
 *.bak
-*.winlogbeat.yaml
+*.winlogbeat.yml
 etc/*.dev.yml
 
 cover/
